finish function suggesting synonyms and variances of a word / character